fix overflow adjust contact button

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,12 +10,6 @@ body::-webkit-scrollbar {
   display: none;
 }
 
-html,
-body {
-  max-width: 100%;
-  overflow-x: hidden;
-}
-
 //CAROUSEL
 .embla {
   overflow: hidden;
@@ -62,7 +56,7 @@ body {
 @media (min-width: 768px) {
   .embla__dots {
     z-index: 1;
-    bottom: -0.2rem;
+    bottom: 0.5rem;
     position: absolute;
     left: 0;
     right: 0;
